Change color scheme

--- a/app/globals.css
+++ b/app/globals.css
@@ -12,12 +12,14 @@
   --font-mono: var(--font-geist-mono);
   
   /* Ocean-inspired color palette */
-  --color-ocean-deep: #0a4d68;
-  --color-ocean-light: #088395;
-  --color-tide-blue: #05bfdb;
-  --color-ocean-foam: #e0f4f7;
-  --color-sun-yellow: #ffd93d;
-  --color-sun-orange: #ff9a3d;
+  --color-ocean-deep: #1F6F78;
+  --color-ocean-light: #3FA9B5;
+  --color-tide-blue: #9FD6C2;
+  --color-ocean-foam: #E6F3F1;
+  --color-sage-green: #7FB685;
+  --color-deep-blue: #3FA9B5;
+  --color-sun-yellow: #7FB685;
+  --color-sun-orange: #7FB685;
 }
 
 @media (prefers-color-scheme: dark) {
